# vpro-mlproject

./: pyproject.toml
src/vpro_mlproject/: __init__.py  exception.py  logger.py
src/vpro_mlproject/notebook/: 1 . EDA STUDENT PERFORMANCE .ipynb  2. MODEL TRAINING.ipynb
src/vpro_mlproject/notebook/catboost_info/: catboost_training.json  time_left.tsv
src/vpro_mlproject/notebook/catboost_info/learn/: events.out.tfevents
