[project]
name = "vpro-mlproject"
version = "0.1.0"
description = "END TO END MACHINE LEARNING PROJECT"
readme = "README.md"
authors = [
    { name = "Muzmmil Pathan", email = "muzmmil.dba@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
vpro-mlproject = "vpro_mlproject:main"

[build-system]
requires = ["uv_build>=0.11.25,<0.12.0"]
build-backend = "uv_build"
