[project]
name = "vpro-mlproject"
version = "0.1.0"
description = "END TO END MACHINE LEARNING PROJECT"
readme = "README.md"
authors = [
    { name = "Muzmmil Pathan", email = "muzmmil.dba@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "catboost>=1.2.10",
    "matplotlib>=3.11.0",
    "numpy>=2.5.0",
    "pandas>=3.0.4",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "xgboost>=3.3.0",
]

[project.scripts]
vpro-mlproject = "vpro_mlproject:main"

[build-system]
requires = ["uv_build>=0.11.25,<0.12.0"]
build-backend = "uv_build"

[tool.uv]
index-url = "https://pypi.apple.com/simple"
